node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: node-app
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/devops: "true"
        io.kompose.service: node-app
    spec:
      containers:
        - image: node-app
          name: node-app
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
