IMDb-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb-backend
spec:
  selector:
    matchLabels:
      app: imdb-backend
  template:
    metadata:
      labels:
        app: imdb-backend
    spec:
      containers:
      - name: imdb-backend
        image: codesenju/imdb-backend:2022-05-26
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: imdb-backend
  ports:
  - port: 5432
    targetPort: 5432
